--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <meta name="keywords" content="objects constructors and doms">
   <meta name="suhaib alnaji" content="Dom manipulation">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/Styling/main.css">
+  <link rel="stylesheet" href="./Styling/main.css">
 
-  <title>HR-managment system</title>
+  <title>HR-managment </title>
 </head>
 <body>
   <header>
     <div id="nav-Logo">
-      <h1><a  href="index.html"><img src="https://img.icons8.com/ios/50/000000/todo-list--v1.png"/>HR Mangement</a> </h1></div>
+      <h1><a  href="index.html"><img src="https://img.icons8.com/ios/50/000000/todo-list--v1.png"/>HR Mangement system</a> </h1></div>
       <nav>
           <ul>
               <li><a href="accounting.html">accounting</a></li>
